--- a/sites/all/themes/virtuoz/css/layouts/fixed.css
+++ b/sites/all/themes/virtuoz/css/layouts/fixed.css
@@ -449,3 +449,18 @@ article .field-name-body{
 .node-16 .field-label{
 	cursor:pointer;	
 }
+
+#block-block-5{
+	width:100%;
+	height:650px;
+	overflow:hidden;
+	position:relative;
+}
+
+#block-block-5 iframe{
+	border:none;
+	position:absolute;
+	top:0;
+	left:50%;
+	margin-left:-1000px;
+}
